# turbochook

./: .gitignore  CLAUDE.md  CMakeLists.txt  LICENSE  README.md  SIM_DETAILS.md
docs/: ARCHITECTURE.md  CPP_PRIMER.md  CPP_STYLE.md  DESIGN.md  FOUNDATIONS.md  GPU_STDPAR_NOTES.md  LESSONS_FROM_RAKALI.md  PORTING_MAP.md  ROADMAP.md  STATUS.md
examples/programs/: demo_baroclinic.cpp  demo_baroclinic_split.cpp  demo_basin.cpp  demo_geostrophic.cpp  m0_walking_skeleton.cpp  reco_demo.cpp
src/: demo_baroclinic.cpp  demo_baroclinic_split.cpp  demo_basin.cpp  demo_geostrophic.cpp  m0_walking_skeleton.cpp  reco_demo.cpp
src/api/: capi.hpp  handle.hpp
src/bc/: bc.hpp  fold.hpp  obc.hpp  sponge.hpp
src/core/: arena.hpp  error.hpp  log.hpp  profiler.hpp  types.hpp
src/diag/: diagnostics.hpp  quantity.cpp  quantity.hpp  reduce.hpp  registry.hpp  report.hpp
src/io/: netcdf.hpp  ocean_output.hpp  restart.hpp
src/lib/: arena.hpp  checksums.hpp  config.hpp  error.hpp  log.hpp  mem_report.hpp  profiler.hpp  safe_math.hpp  units.hpp
src/mesh/: cartesian_mesh.hpp  iterate.hpp  masked_mesh.hpp  mesh.hpp  spherical_mesh.hpp
src/numerics/: integrator.hpp  parallel.hpp  split_explicit.hpp
src/physics/: baro_state.hpp  barotropic.hpp  continuity.hpp  coriolis.hpp  layered_state.hpp  multilayer_core.hpp  ocean_core.hpp  pgf.hpp  reconstruction.hpp  split_two_layer.hpp  two_layer_pgf.hpp
src/physics/continuity/: continuity.hpp  reconstruction.hpp
src/physics/core/: barotropic.hpp  multilayer_core.hpp  ocean_core.hpp  split_multilayer_core.hpp  split_two_layer.hpp
src/physics/forcing/: forcing.hpp
src/physics/lateral/: dissipation.hpp  lateral_mix.hpp
src/physics/momentum/: coriolis.hpp  pgf.hpp  pgf_layered.hpp  two_layer_pgf.hpp
src/physics/state/: baro_state.hpp  layered_state.hpp
src/physics/tracer/: eos.hpp  tracer.hpp
src/physics/vertical/: remap.hpp  vcoord.hpp  vmix.hpp
tests/: test_barotropic.cpp  test_continuity.cpp  test_coriolis.cpp  test_diag.cpp  test_gravity_wave.cpp  test_integrator.cpp  test_m0.cpp  test_masked_mesh.cpp  test_mesh.cpp  test_netcdf.cpp  test_periodic.cpp  test_pgf.cpp  test_reconstruction.cpp  test_registry.cpp  test_spherical_mesh.cpp  test_spherical_ops.cpp  test_split_explicit.cpp  test_two_layer.cpp
